# pipeline-llm-adaptation

./: .env.example  .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.cursor/rules/: python.mdc
.dvc/: config
data/: raw.dvc
fine_tuning/: README.md
fine_tuning/inference/: erx-llama-3-8b.yaml
fine_tuning/train_lora/: erx-llama-3-8b-high.yaml  erx-llama-3-8b-low.yaml  erx-llama-3-8b-medium.yaml
nbs/: erx-prompt-optim.ipynb
nbs/erx/: arena.ipynb  dataset_preparation.ipynb  dataset_preparation_finetuning.ipynb  debug-llm-compat.ipynb  exps.jsonl  leaderboard.json  preprocess.ipynb  prompt_optimization.ipynb  report.ipynb  run.sh  scribble.ipynb  setup.ipynb  visualization.ipynb
scripts/: copy-results.sh  erx_arena.py  fetch-results.sh  prepare_erx_webnlg.py
src/adapt/: utils.py
src/adapt/dspy/: tgi_json_adapter.py
src/adapt/task/: erx.py
